--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "php": "^7.1",
         "ext-iconv": "*",
         "react/event-loop": "^1.1",
-        "react/socket": "^1.2",
-        "monolog/monolog": "^2.0"
+        "react/socket": "^1.2"
     },
     "require-dev": {
-        "codeception/codeception": "^3.0"
+        "codeception/codeception": "^3.0",
+        "monolog/monolog": "^2.0"
     }
 }
